@@ -3,6 +3,8 @@ Change history for translation-utility
 ================================================================================
 
 DONE:
+6/25/08 - change URL for translation utility homepage to reflect new website organization
+6/25/08 - catch FileNotFoundException when looking for translation-utility.properties on server
 6/16/08 - discover project name from jar files named curve-fit.jar or curve-fit_fr.jar
 6/16/08 - wrap main in SwingUtility.invokeLater
 6/16/08 - remove HTML file generation for Flash, handled dynamically by FlashLauncher
